==============
lxml changelog
==============

Under development
=================

Features added
--------------

Bugs fixed
----------

* HTML elements' ``.cssselect()`` method was broken.

* ``ElementTree.find*()`` didn't accept QName objects.

Other changes
-------------


2.0.3 (2008-03-26)
==================

Features added
--------------

* soupparser.parse() allows passing keyword arguments on to
  BeautifulSoup.

* ``fromstring()`` method in ``lxml.html.soupparser``.

Bugs fixed
----------

* ``lxml.html.diff`` didn't treat empty tags properly (e.g.,
  ``<br>``).

* Handle entity replacements correctly in target parser.

* Crash when using ``iterparse()`` with XML Schema validation.

* The BeautifulSoup parser (soupparser.py) did not replace entities,
  which made them turn up in text content.

* Attribute assignment of custom PyTypes in objectify could fail to
  correctly serialise the value to a string.

Other changes
-------------

* ``lxml.html.ElementSoup`` was replaced by a new module
  ``lxml.html.soupparser`` with a more consistent API.  The old module
  remains for compatibility with ElementTree's own ElementSoup module.

* Setting the XSLT_CONFIG and XML2_CONFIG environment variables at
  build time will let setup.py pick up the ``xml2-config`` and
  ``xslt-config`` scripts from the supplied path name.

* Passing ``--with-xml2-config=/path/to/xml2-config`` to setup.py will
  override the ``xml2-config`` script that is used to determine the C
  compiler options.  The same applies for the ``--with-xslt-config``
  option.


2.0.2 (2008-02-22)
==================

Features added
--------------

* Support passing ``base_url`` to file parser functions to override
  the filename of the file(-like) object.

Bugs fixed
----------

* The prefix for objectify's pytype namespace was missing from the set
  of default prefixes.

* Memory leak in Schematron (fixed only for libxml2 2.6.31+).

* Error type names in RelaxNG were reported incorrectly.
