@@ -11,6 +11,8 @@ Features added
 Bugs fixed
 ----------
 
+* Crash bug in iterparse when moving elements into other documents.
+
 * HTML elements' ``.cssselect()`` method was broken.
 
 * ``ElementTree.find*()`` didn't accept QName objects.
